Initial client code and user guide.